cabal-version:      3.0
name:               l-system
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Joseph Haugh
maintainer:         jhaugh500@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  LSystem
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable l-system
    import:           warnings
    main-is:          Main.hs
    other-modules:    GlossMain
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        l-system,
        gloss

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite l-system-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        l-system
